<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/dp_20"
    android:paddingRight="@dimen/dp_20"
    android:paddingBottom="@dimen/dp_20"
    tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/textLogDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_50"
        android:paddingTop="@dimen/dp_20"
        android:paddingBottom="12dp"
        android:text="LOG详情"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_50"
        android:paddingTop="@dimen/dp_20"
        android:paddingBottom="12dp"
        android:text="清屏"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/llLogDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@color/text_background"
        app:layout_constraintBottom_toTopOf="@+id/conSend"
        app:layout_constraintStart_toStartOf="@+id/textLogDetailsTitle"
        app:layout_constraintTop_toBottomOf="@+id/textLogDetailsTitle">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewLogDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:scrollbarThumbVertical="@color/grey"
            android:scrollbars="vertical" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/conSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textPortRateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/string_port_rate1" />

        <Spinner
            android:id="@+id/spinnerPortRate"
            android:layout_width="@dimen/dp_150"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:minWidth="@dimen/dp_100"
            app:layout_constraintStart_toEndOf="@+id/textPortRateTitle"
            app:layout_constraintTop_toTopOf="@+id/textPortRateTitle" />

        <TextView
            android:id="@+id/textPortTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/string_port"
            app:layout_constraintTop_toBottomOf="@+id/textPortRateTitle" />

        <Spinner
            android:id="@+id/spinnerPortValue"
            android:layout_width="@dimen/dp_150"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:minWidth="@dimen/dp_100"
            app:layout_constraintStart_toEndOf="@+id/textPortTitle"
            app:layout_constraintTop_toTopOf="@+id/textPortTitle" />

        <EditText
            android:id="@+id/textCmdInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@color/text_background"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:padding="@dimen/dp_10"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toStartOf="@+id/textCMDTitle"
            app:layout_constraintStart_toEndOf="@+id/spinnerPortValue"
            app:layout_constraintTop_toTopOf="@+id/textPortRateTitle" />

        <TextView
            android:id="@+id/textCMDTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:text="@string/string_cmd"
            app:layout_constraintBottom_toBottomOf="@+id/textCmdInput"
            app:layout_constraintEnd_toStartOf="@+id/spinnerCMDValue"
            app:layout_constraintTop_toTopOf="@+id/textCmdInput" />

        <com.industio.uart.view.CKDateSpinner
            android:id="@+id/spinnerCMDValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_20"
            app:layout_constraintEnd_toStartOf="@+id/btnSend"
            app:layout_constraintTop_toTopOf="@+id/textCMDTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_corner"
            android:text="发送"
            app:layout_constraintBottom_toBottomOf="@+id/textCmdInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textCmdInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>